--- a/electron/index.html
+++ b/electron/index.html
@@ -15,46 +15,39 @@
     <div class="window">
       <div class="window-content">
         <div class="column column-1">
-          <!--<div class="file-info-wrapper">-->
-            <div class="file-info">
-              <img id="intro-logo" src="img/dataproofer-logo-2.png" alt="Dataproofer"/>
-              <!-- <div id="dataproofer-intro-description">
-                Upload your dataset, then select from Dataproofer’s sets of tests to identify any potential red flags before use.
-              </div> -->
-              <p><small id="filetypes-accepted">Currently supported:<br/>XLSX, XLS, CSV, TSV, PSV</small></p>
-              <input id="file-loader" type="file" /><label id="file-loader-button" for="file-loader"><i class="fa fa-arrow-up" aria-hidden="true"></i> Load local file</label>
-              <!--
-              <div>
-                <p>OR</p>
-              </div>
-              -->
-              <hr />
-              <div class="spreadsheet-input-wrapper">
-                <input id="spreadsheet-input" placeholder="Paste Google Spreadsheet URL or ID">
-                <div id="spreadsheet-button"><i class="fa fa-cloud-download"></i> Load sheet</div>
-              </div>
-              <div id="gsheets-response">
-              </div>
-              <div id="info-top-bar">
-                <span id="current-file-name"></span>
-                <span id="file-size-warning"></span>
-                <div id="nav-buttons">
-                  <button id="back-button" class="btn btn-large"></button>
-                  <button id="forward-button" class="btn btn-large"></button>
-                </div>
+          <div class="file-info">
+            <img id="intro-logo" src="img/dataproofer-logo-2.png" alt="Dataproofer"/>
+            <!-- <div id="dataproofer-intro-description">
+              Upload your dataset, then select from Dataproofer’s sets of tests to identify any potential red flags before use.
+            </div> -->
+            <p><small id="filetypes-accepted">Currently supported:<br/>XLSX, XLS, CSV, TSV, PSV</small></p>
+            <input id="file-loader" type="file" /><label id="file-loader-button" for="file-loader"><i class="fa fa-arrow-up" aria-hidden="true"></i> Load local file</label>
+            <hr />
+            <div class="spreadsheet-input-wrapper">
+              <input id="spreadsheet-input" placeholder="Paste Google Spreadsheet URL or ID">
+              <div id="spreadsheet-button"><i class="fa fa-cloud-download"></i> Load sheet</div>
+            </div>
+            <div id="gsheets-response">
+            </div>
+            <div id="info-top-bar">
+              <span id="current-file-name"></span>
+              <span id="file-size-warning"></span>
+              <div id="nav-buttons">
+                <button id="back-button" class="btn btn-large"></button>
+                <button id="forward-button" class="btn btn-large"></button>
               </div>
             </div>
-          <!-- </div> -->
-          <!-- <div class="test-sets-wrapper"> -->
+          </div>
+          <!-- <div class="test-sets-wrapper">
             <p>Et qui dolor velit aute aliqua ipsum eu Lorem aute. Commodo commodo qui mollit fugiat sunt eu voluptate. Eu ea laborum officia incididunt do aliquip amet enim proident adipisicing minim non.</p>
             <p>Elit officia exercitation nisi enim anim aliquip laborum mollit adipisicing officia reprehenderit fugiat quis. Eiusmod sit elit laboris excepteur nulla duis excepteur cupidatat adipisicing voluptate ea. Nisi laborum ullamco eiusmod duis proident consectetur nulla. Lorem fugiat aliquip veniam consequat deserunt non in et id tempor eiusmod incididunt elit velit nostrud amet qui.</p>
             <p>Nostrud magna qui tempor nulla labore irure sit sint laborum ad. Occaecat anim sint anim eiusmod id cillum eiusmod ullamco laborum labore tempor reprehenderit minim. Sunt officia deserunt ipsum enim velit mollit in magna ut aliqua. Ea labore labore pariatur proident voluptate ad deserunt nulla voluptate proident proident reprehenderit et voluptate cillum. Cupidatat anim consectetur consequat reprehenderit ullamco dolore officia amet.</p>
             <p>Veniam non anim commodo officia culpa eu voluptate excepteur. Ut irure occaecat id anim nulla mollit ea ullamco eu laboris excepteur. Dolore id amet tempor labore aliquip et sint velit. Magna ex ut incididunt pariatur incididunt sint enim eiusmod et. Dolor labore anim voluptate irure sunt culpa nostrud elit dolor non Lorem.</p>
-          <!-- </div> -->
+          </div> -->
         </div>
         <div class="column column-2">
           <div id="grid" class="spreadsheet">
-            <p>Nostrud est nisi ad ea veniam pariatur quis sit aute labore occaecat dolore ad labore ullamco voluptate. Ut aliqua non excepteur sunt velit pariatur laborum ea veniam aliquip cillum. Laborum incididunt do Lorem do sit mollit exercitation occaecat consequat amet occaecat. Exercitation voluptate proident cillum id incididunt reprehenderit eiusmod do. Ullamco labore fugiat ipsum dolore do consequat magna commodo id labore aute reprehenderit est pariatur enim proident. Enim enim dolore aute excepteur aute ex do sit laboris. Sint est commodo ullamco sunt consectetur sunt mollit sunt.</p>
+            <!-- <p>Nostrud est nisi ad ea veniam pariatur quis sit aute labore occaecat dolore ad labore ullamco voluptate. Ut aliqua non excepteur sunt velit pariatur laborum ea veniam aliquip cillum. Laborum incididunt do Lorem do sit mollit exercitation occaecat consequat amet occaecat. Exercitation voluptate proident cillum id incididunt reprehenderit eiusmod do. Ullamco labore fugiat ipsum dolore do consequat magna commodo id labore aute reprehenderit est pariatur enim proident. Enim enim dolore aute excepteur aute ex do sit laboris. Sint est commodo ullamco sunt consectetur sunt mollit sunt.</p>
             <p>Exercitation sit cupidatat fugiat veniam occaecat id cupidatat laboris quis aliqua ad veniam qui amet in. Dolore sunt reprehenderit cupidatat veniam commodo enim minim anim. Non proident commodo elit aliqua nostrud et exercitation duis veniam reprehenderit adipisicing sunt voluptate laboris consequat. Magna minim eiusmod aliqua sint commodo qui qui deserunt aliqua. Reprehenderit Lorem sint laborum deserunt do commodo dolore et adipisicing do non aliqua.</p>
             <p>Nostrud do velit ullamco mollit mollit esse reprehenderit veniam officia. Minim nostrud quis est deserunt magna nostrud nostrud excepteur nulla non duis duis elit excepteur labore ipsum. In et quis quis ex excepteur ullamco consectetur cupidatat nisi elit proident cupidatat magna proident id ullamco. Ipsum Lorem laboris ipsum magna nostrud ad enim ipsum reprehenderit id commodo sit irure esse in sit. Fugiat incididunt ex nulla consectetur incididunt cillum proident magna aliqua elit in voluptate deserunt eu id. Culpa velit amet fugiat aliqua magna anim dolore ad. Anim nulla anim sint esse irure in consequat est tempor. Esse laboris nostrud sunt irure eu est pariatur cupidatat dolor laboris sunt laborum magna.</p>
             <p>Exercitation sit pariatur nostrud id voluptate voluptate sit ex mollit fugiat amet ea voluptate. Mollit et sint laboris laboris nulla magna et consequat aute voluptate do qui excepteur commodo. Id aliquip enim culpa mollit nulla tempor nostrud ex laborum voluptate occaecat do fugiat. Voluptate reprehenderit officia aute magna eu duis aliqua duis labore occaecat aliqua eu tempor officia.</p>
@@ -69,8 +62,7 @@
             <p>Nostrud est nisi ad ea veniam pariatur quis sit aute labore occaecat dolore ad labore ullamco voluptate. Ut aliqua non excepteur sunt velit pariatur laborum ea veniam aliquip cillum. Laborum incididunt do Lorem do sit mollit exercitation occaecat consequat amet occaecat. Exercitation voluptate proident cillum id incididunt reprehenderit eiusmod do. Ullamco labore fugiat ipsum dolore do consequat magna commodo id labore aute reprehenderit est pariatur enim proident. Enim enim dolore aute excepteur aute ex do sit laboris. Sint est commodo ullamco sunt consectetur sunt mollit sunt.</p>
             <p>Exercitation sit cupidatat fugiat veniam occaecat id cupidatat laboris quis aliqua ad veniam qui amet in. Dolore sunt reprehenderit cupidatat veniam commodo enim minim anim. Non proident commodo elit aliqua nostrud et exercitation duis veniam reprehenderit adipisicing sunt voluptate laboris consequat. Magna minim eiusmod aliqua sint commodo qui qui deserunt aliqua. Reprehenderit Lorem sint laborum deserunt do commodo dolore et adipisicing do non aliqua.</p>
             <p>Nostrud do velit ullamco mollit mollit esse reprehenderit veniam officia. Minim nostrud quis est deserunt magna nostrud nostrud excepteur nulla non duis duis elit excepteur labore ipsum. In et quis quis ex excepteur ullamco consectetur cupidatat nisi elit proident cupidatat magna proident id ullamco. Ipsum Lorem laboris ipsum magna nostrud ad enim ipsum reprehenderit id commodo sit irure esse in sit. Fugiat incididunt ex nulla consectetur incididunt cillum proident magna aliqua elit in voluptate deserunt eu id. Culpa velit amet fugiat aliqua magna anim dolore ad. Anim nulla anim sint esse irure in consequat est tempor. Esse laboris nostrud sunt irure eu est pariatur cupidatat dolor laboris sunt laborum magna.</p>
-            <p>Exercitation sit pariatur nostrud id voluptate voluptate sit ex mollit fugiat amet ea voluptate. Mollit et sint laboris laboris nulla magna et consequat aute voluptate do qui excepteur commodo. Id aliquip enim culpa mollit nulla tempor nostrud ex laborum voluptate occaecat do fugiat. Voluptate reprehenderit officia aute magna eu duis aliqua duis labore occaecat aliqua eu tempor officia.</p>
-
+            <p>Exercitation sit pariatur nostrud id voluptate voluptate sit ex mollit fugiat amet ea voluptate. Mollit et sint laboris laboris nulla magna et consequat aute voluptate do qui excepteur commodo. Id aliquip enim culpa mollit nulla tempor nostrud ex laborum voluptate occaecat do fugiat. Voluptate reprehenderit officia aute magna eu duis aliqua duis labore occaecat aliqua eu tempor officia.</p> -->
           </div>
           <div class="grid-footer">
             Search
@@ -79,6 +71,24 @@
         <div class="column column-3">
           <div class="overview-title">OVERVIEW</div>
           <canvas id="fingerprint"></canvas>
+          <!-- <div class="column-3-filler">
+            <p>Nostrud est nisi ad ea veniam pariatur quis sit aute labore occaecat dolore ad labore ullamco voluptate. Ut aliqua non excepteur sunt velit pariatur laborum ea veniam aliquip cillum. Laborum incididunt do Lorem do sit mollit exercitation occaecat consequat amet occaecat. Exercitation voluptate proident cillum id incididunt reprehenderit eiusmod do. Ullamco labore fugiat ipsum dolore do consequat magna commodo id labore aute reprehenderit est pariatur enim proident. Enim enim dolore aute excepteur aute ex do sit laboris. Sint est commodo ullamco sunt consectetur sunt mollit sunt.</p>
+            <p>Exercitation sit cupidatat fugiat veniam occaecat id cupidatat laboris quis aliqua ad veniam qui amet in. Dolore sunt reprehenderit cupidatat veniam commodo enim minim anim. Non proident commodo elit aliqua nostrud et exercitation duis veniam reprehenderit adipisicing sunt voluptate laboris consequat. Magna minim eiusmod aliqua sint commodo qui qui deserunt aliqua. Reprehenderit Lorem sint laborum deserunt do commodo dolore et adipisicing do non aliqua.</p>
+            <p>Nostrud do velit ullamco mollit mollit esse reprehenderit veniam officia. Minim nostrud quis est deserunt magna nostrud nostrud excepteur nulla non duis duis elit excepteur labore ipsum. In et quis quis ex excepteur ullamco consectetur cupidatat nisi elit proident cupidatat magna proident id ullamco. Ipsum Lorem laboris ipsum magna nostrud ad enim ipsum reprehenderit id commodo sit irure esse in sit. Fugiat incididunt ex nulla consectetur incididunt cillum proident magna aliqua elit in voluptate deserunt eu id. Culpa velit amet fugiat aliqua magna anim dolore ad. Anim nulla anim sint esse irure in consequat est tempor. Esse laboris nostrud sunt irure eu est pariatur cupidatat dolor laboris sunt laborum magna.</p>
+            <p>Exercitation sit pariatur nostrud id voluptate voluptate sit ex mollit fugiat amet ea voluptate. Mollit et sint laboris laboris nulla magna et consequat aute voluptate do qui excepteur commodo. Id aliquip enim culpa mollit nulla tempor nostrud ex laborum voluptate occaecat do fugiat. Voluptate reprehenderit officia aute magna eu duis aliqua duis labore occaecat aliqua eu tempor officia.</p>
+            <p>Nostrud est nisi ad ea veniam pariatur quis sit aute labore occaecat dolore ad labore ullamco voluptate. Ut aliqua non excepteur sunt velit pariatur laborum ea veniam aliquip cillum. Laborum incididunt do Lorem do sit mollit exercitation occaecat consequat amet occaecat. Exercitation voluptate proident cillum id incididunt reprehenderit eiusmod do. Ullamco labore fugiat ipsum dolore do consequat magna commodo id labore aute reprehenderit est pariatur enim proident. Enim enim dolore aute excepteur aute ex do sit laboris. Sint est commodo ullamco sunt consectetur sunt mollit sunt.</p>
+            <p>Exercitation sit cupidatat fugiat veniam occaecat id cupidatat laboris quis aliqua ad veniam qui amet in. Dolore sunt reprehenderit cupidatat veniam commodo enim minim anim. Non proident commodo elit aliqua nostrud et exercitation duis veniam reprehenderit adipisicing sunt voluptate laboris consequat. Magna minim eiusmod aliqua sint commodo qui qui deserunt aliqua. Reprehenderit Lorem sint laborum deserunt do commodo dolore et adipisicing do non aliqua.</p>
+            <p>Nostrud do velit ullamco mollit mollit esse reprehenderit veniam officia. Minim nostrud quis est deserunt magna nostrud nostrud excepteur nulla non duis duis elit excepteur labore ipsum. In et quis quis ex excepteur ullamco consectetur cupidatat nisi elit proident cupidatat magna proident id ullamco. Ipsum Lorem laboris ipsum magna nostrud ad enim ipsum reprehenderit id commodo sit irure esse in sit. Fugiat incididunt ex nulla consectetur incididunt cillum proident magna aliqua elit in voluptate deserunt eu id. Culpa velit amet fugiat aliqua magna anim dolore ad. Anim nulla anim sint esse irure in consequat est tempor. Esse laboris nostrud sunt irure eu est pariatur cupidatat dolor laboris sunt laborum magna.</p>
+            <p>Exercitation sit pariatur nostrud id voluptate voluptate sit ex mollit fugiat amet ea voluptate. Mollit et sint laboris laboris nulla magna et consequat aute voluptate do qui excepteur commodo. Id aliquip enim culpa mollit nulla tempor nostrud ex laborum voluptate occaecat do fugiat. Voluptate reprehenderit officia aute magna eu duis aliqua duis labore occaecat aliqua eu tempor officia.</p>
+            <p>Nostrud est nisi ad ea veniam pariatur quis sit aute labore occaecat dolore ad labore ullamco voluptate. Ut aliqua non excepteur sunt velit pariatur laborum ea veniam aliquip cillum. Laborum incididunt do Lorem do sit mollit exercitation occaecat consequat amet occaecat. Exercitation voluptate proident cillum id incididunt reprehenderit eiusmod do. Ullamco labore fugiat ipsum dolore do consequat magna commodo id labore aute reprehenderit est pariatur enim proident. Enim enim dolore aute excepteur aute ex do sit laboris. Sint est commodo ullamco sunt consectetur sunt mollit sunt.</p>
+            <p>Exercitation sit cupidatat fugiat veniam occaecat id cupidatat laboris quis aliqua ad veniam qui amet in. Dolore sunt reprehenderit cupidatat veniam commodo enim minim anim. Non proident commodo elit aliqua nostrud et exercitation duis veniam reprehenderit adipisicing sunt voluptate laboris consequat. Magna minim eiusmod aliqua sint commodo qui qui deserunt aliqua. Reprehenderit Lorem sint laborum deserunt do commodo dolore et adipisicing do non aliqua.</p>
+            <p>Nostrud do velit ullamco mollit mollit esse reprehenderit veniam officia. Minim nostrud quis est deserunt magna nostrud nostrud excepteur nulla non duis duis elit excepteur labore ipsum. In et quis quis ex excepteur ullamco consectetur cupidatat nisi elit proident cupidatat magna proident id ullamco. Ipsum Lorem laboris ipsum magna nostrud ad enim ipsum reprehenderit id commodo sit irure esse in sit. Fugiat incididunt ex nulla consectetur incididunt cillum proident magna aliqua elit in voluptate deserunt eu id. Culpa velit amet fugiat aliqua magna anim dolore ad. Anim nulla anim sint esse irure in consequat est tempor. Esse laboris nostrud sunt irure eu est pariatur cupidatat dolor laboris sunt laborum magna.</p>
+            <p>Exercitation sit pariatur nostrud id voluptate voluptate sit ex mollit fugiat amet ea voluptate. Mollit et sint laboris laboris nulla magna et consequat aute voluptate do qui excepteur commodo. Id aliquip enim culpa mollit nulla tempor nostrud ex laborum voluptate occaecat do fugiat. Voluptate reprehenderit officia aute magna eu duis aliqua duis labore occaecat aliqua eu tempor officia.</p>
+            <p>Nostrud est nisi ad ea veniam pariatur quis sit aute labore occaecat dolore ad labore ullamco voluptate. Ut aliqua non excepteur sunt velit pariatur laborum ea veniam aliquip cillum. Laborum incididunt do Lorem do sit mollit exercitation occaecat consequat amet occaecat. Exercitation voluptate proident cillum id incididunt reprehenderit eiusmod do. Ullamco labore fugiat ipsum dolore do consequat magna commodo id labore aute reprehenderit est pariatur enim proident. Enim enim dolore aute excepteur aute ex do sit laboris. Sint est commodo ullamco sunt consectetur sunt mollit sunt.</p>
+            <p>Exercitation sit cupidatat fugiat veniam occaecat id cupidatat laboris quis aliqua ad veniam qui amet in. Dolore sunt reprehenderit cupidatat veniam commodo enim minim anim. Non proident commodo elit aliqua nostrud et exercitation duis veniam reprehenderit adipisicing sunt voluptate laboris consequat. Magna minim eiusmod aliqua sint commodo qui qui deserunt aliqua. Reprehenderit Lorem sint laborum deserunt do commodo dolore et adipisicing do non aliqua.</p>
+            <p>Nostrud do velit ullamco mollit mollit esse reprehenderit veniam officia. Minim nostrud quis est deserunt magna nostrud nostrud excepteur nulla non duis duis elit excepteur labore ipsum. In et quis quis ex excepteur ullamco consectetur cupidatat nisi elit proident cupidatat magna proident id ullamco. Ipsum Lorem laboris ipsum magna nostrud ad enim ipsum reprehenderit id commodo sit irure esse in sit. Fugiat incididunt ex nulla consectetur incididunt cillum proident magna aliqua elit in voluptate deserunt eu id. Culpa velit amet fugiat aliqua magna anim dolore ad. Anim nulla anim sint esse irure in consequat est tempor. Esse laboris nostrud sunt irure eu est pariatur cupidatat dolor laboris sunt laborum magna.</p>
+            <p>Exercitation sit pariatur nostrud id voluptate voluptate sit ex mollit fugiat amet ea voluptate. Mollit et sint laboris laboris nulla magna et consequat aute voluptate do qui excepteur commodo. Id aliquip enim culpa mollit nulla tempor nostrud ex laborum voluptate occaecat do fugiat. Voluptate reprehenderit officia aute magna eu duis aliqua duis labore occaecat aliqua eu tempor officia.</p>
+          </div> -->
         </div>
         <div class="test-editor" style="display:none">
           <h3>Editing check:</h3>
